--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1159,6 +1159,8 @@ a:hover {
   #about .event-place,
   #about .about-text {
     font-size: initial;
+    line-height: 1.85em;
+    text-align: center;
     padding: 0 0.5rem;
   }
 
